--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Kevin Frazier</title>
 		<!-- link to main stylesheet -->
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
         <p>
@@ -11,7 +11,7 @@
     		<div class="blurb">
                 <center>
                     <img src="profile.jpg" alt="Profile" width="150" height="150">
-        		<h1>Katherine Legaspi</h1>
+        		<h1>Kevin Frazier</h1>
                 </center>
 				<p>
     		</div><!-- /.blurb -->
